# ash-cube

./: Cargo.toml
data/shaders/: vert.spv
src/: app.rs  config.rs  main.rs
src/cameras/: camera.rs  mod.rs
src/entities/: entity.rs  mod.rs  vertex.rs
src/pipelines/: pipeline.rs
src/shaders/: shader.vert
