[package]
name = "ash-cube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version="0.35.0", default-features = false, features = ["linked", "debug"] }
ash-window = "0.9.0"
nalgebra = "0.29.0"
once_cell = "1.9.0"
winit = "0.26.0"
